# CatCode.Service.GitOpsReconciliation

./: .gitignore  Dockerfile  README.md  appconfig.yaml  main.py  pyproject.toml  settings.py
applications/: base.yaml  kinds.yaml
reconsiliator/application/: model.py
reconsiliator/io/: __init__.py  reader.py
